dataset/local/tf_lambda_code_signing/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: check-lambda-code-signing
policies:
  - policy.yaml
resources:
  - resource.yaml
results:
  - policy: check-lambda-code-signing
    kind: Plan
    resources:
      - good-plan
    result: pass
  - policy: check-lambda-code-signing
    kind: Plan
    resources:
      - bad-plan
    result: fail
